--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,9 +5,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  # sdk: '>=3.3.0 <4.0.0'
-  sdk: ">=2.15.0 <3.0.0"
-
+  sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -18,6 +16,7 @@ dependencies:
   google_fonts: ^6.1.0
   animated_bottom_navigation_bar: ^1.3.3
   intl_phone_field: ^3.2.0
+  buttons_tabbar: ^1.3.8
 
 dev_dependencies:
   flutter_test:
